# 2048

./: .gitignore  README.md  meson.build
data/: com.expidus.twentyfortyeight.gschema.xml  expidus-2048.desktop.in
data/res/: game-win.glade  res.gresource.xml  settings-win.glade
po/: POTFILES  en.po  expidus-2048.pot  meson.build
src/: application.vala  build.h.in  build.vala.in  colorscheme.vala  game.vala  main.vala  window.vala
